# python-extensions-static-site-generator

./: pyproject.toml
ssg/: hooks.py  parsers.py
