[tool.poetry]
name = "python-extensions-static-site-generator"
version = "0.1.0"
description = ""
authors = ["Ricky Tharrington <Ricky.Tharrington@sas.com>"]
readme = "README.md"
packages = [{include = "python_extensions_static_site_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
docutils = "^0.16"
markdown = "^3.2.1"
mongoquery = "^1.3.6"
objectpath = "^0.6.1"
parso = "^0.8.3"
pytest = "^7.3.1"
pytest-json-report = "^1.2.1"
pyyaml = "^5.3.1"
typer = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
